# solve_pde

./: Makefile  PDE Solver.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: PDE Solver-checkpoint.ipynb  PDE solver-checkpoint.py
src/solve_pde/: main.py
src/solve_pde/pde_solver/: conditions.py  fdm.py  plotter.py
