[project]
name = "solve-pde"
version = "0.1.0"
description = ""
authors = [
    {name = "Artur Lemes Moretti",email = "turlemes@eemovel.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "notebook (>=7.4.1,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]

[tool.poetry]
packages = [{include = "solve_pde", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
